# vitis

./: .gitignore  .gitlab-ci.yml  .releaserc  Cargo.toml  README.md  dev_run.sh  package-lock.json  package.json  restart.sh
.sqlx/: query-02a9d0f331f7fccdf6ed7c5a18bcd2f450fd8fe56b5cbcecb509b6f90c0bacbc.json  query-03637289b1eb449917c236a8ddc5b0749d994862382eb9392a7a65423c91f962.json  query-049275dd644146ec016c91ac53487dd98311b8dc2c659681ffc0fcd3dd7b0af6.json  query-05b0b53a50cc612242f439f213695c9bfb2094ee84544644b1303558e45775f7.json  query-073f92f8c081b088b7491f75c36d5b280530dbb98db8a67e240bd29ddcbe6734.json  query-0c54589de4eb4100b9c11b946c0a256e1dc52f53fff17d04c974967ba5ee815a.json  query-0f3f83081cc9e210865583a9056ccd0dc0909a4a67c45426f125385d19740524.json  query-14bbd8ff9b84a1e238772ec68975f8b7f5a67e40f8318c9ffa1c11aa11f1f674.json  query-1539560d3f8fa393b16c0b4d13334ba014cd3643b168d8879eda73b4ce0e44c0.json  query-15598c302f47253e468a3deb87047965c896a18e3d70a58135b0e84dd700f78a.json  query-1a7d35e933a101055bdf583904329ce0fa45d74ca12e1018f8180f06b87abd9d.json  query-1b1e6a1a54be01a1b043ead95457800d95e5478f940692e74377aef3a657f98f.json  query-1b3a33fb6b76b8d5a8dae6d658064c0e9939e13d7c6cad1680813b4ffeeafd9e.json  query-1ba0d786e7d3af95de1f14c6a1a5f0c6c627bb6ef05acf8afab4bd6424417034.json  query-1c0fff3e21bcc9e4d84e0bf959e29f0a609fd72d9419356307265a77d6e87725.json  query-20c3b91952615c5264cb1efbe7aaa80a132a70ed6d57c6a0adf379f6f5b59955.json  query-2458e34bcf97885387ee904d1291b56c542e95c7eda1acf2fc7a41c55f9f7b74.json  query-2eef4658ace4e205ce8457eae03bbbca15a762bb4e77e9a4e85a733716b15246.json  query-321dbb70b5f8b80d7a8177358760cfc4ec3382d89820a971e806d66b70ab3210.json  query-3336ef21b2e63f0edd226d0afb87674bfae31ebca082d4fbe1542ebf48bc2883.json  query-356b105d2de46e2d22c591fec5fcd2fb807a368ba051501b69b7ce4b11753c6c.json  query-356b6abb7007bac55199c65c168eb3f7144a2ce7da355c56f1fb8bfd3d0fd96e.json  query-38b6e1b6c836cd5655e8914d5d40ee1e81b1bcf45695dc803b5adff6d4d155c4.json  query-438a0958d687ef9ac541b76e8704669b3c7b1d71f62712be9a2a4bc62c787b53.json  query-44b66f726e5d9c7dd08698562e4885509cd0b9658f09aef4e7364691c23a5114.json  query-4dae9281b32e3755486d999317a16e5442acb8361a6f4ed6083218a9f7251c00.json  query-4df7e395bf4f0cf8b71c21853646e5166d7737391376829535f18e0543afa1d9.json  query-56d31f8c07c8c11e706d4df59d905064360fcfe58fb17e873c58a5b59d112f34.json  (+57 more)
migrations/: 001_user.sql  (+20 more)
(+88 files in other folders)
